--- a/css/main.css
+++ b/css/main.css
@@ -1,164 +1,39 @@
-html,body,.wrap {
-    height:100%
-}
+@import "https://fonts.googleapis.com/css?family=Open+Sans";
 
-body {
-    margin:0;
-    font:normal 14px/1.2 Lato,Helvetica,Arial,sans-serif;
-    text-align:center;
-    background:#111 url(https://i.imgur.com/pbb1mrH.jpg) center top/ cover;
-    color:#f7f7f7
-}
+@import "https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300";
 
-* {
-    -webkit-touch-callout:none;
-    -webkit-tap-highlight-color:rgba(0,0,0,0);
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
-    user-drag:none
-}
-
-:: -moz-selection {
-    background:#C44D58;
-    color:#fff
-}
-
-:: selection {
-    background:#C44D58;
-    color:#fff
-}
-
-a {
-    text-decoration:none;
-    color:#f7f7f7
-}
-
-a:hover,a: active {
-    outline:none;
-    text-decoration:underline
-}
-
-a: focus {
-    outline:thin dotted
-}
-
-.wrap,.main {
-    display:inline-block;
-    vertical-align:middle
-}
-
-.main {
-    padding:8px 20px 15px
-}
-
-h1,h2 {
-    font-family:"Lato",Helvetica,Arial,sans-serif;
-    margin:0;
+#sky {
+    background-color:#4BB2F2;
+    width:100%;
+    height:450px;
+    position:fixed;
+    top:0;
+    left:0;
+    font-size:45px;
     color:#FFF;
-    font-weight:400;
-    font-size:96px
+    font-family:'Open Sans Condensed',sans-serif;
+    font-weight:700;
+    text-align:center
 }
 
-.me {
-    height:150px;
-    width:150px;
-    border-radius:20%;
-    -webkit-box-shadow:2px 2px 9px rgba(2,2,2,.2);
-    box-shadow:2px 2px 9px rgba(2,2,2,.2);
-    -webkit-filter:saturate(60%);
-    filter:saturate(60%);
-    transition:filter .2s
+#mid {
+    background-image:url(http://arcadedistro.com/wp-content/uploads/2014/06/minecraft-grass-block-wallpaper-wallpaper-viewing-gallery-for-minecraft-grass-block-texture-pack-image-e1405159083774.png);
+    width:100%;
+    height:145px;
+    position:fixed;
+    top:50%;
+    left:0;
+    font-size:20px;
+    color:#FFF;
+    font-family:'Open Sans',sans-serif;
+    font-weight:700
 }
 
-.me:hover {
-    -webkit-filter:saturate(0%);
-    filter:saturate(0%)
-}
-
-h2 {
-    font-size:36px;
-    font-weight:300
-}
-
-.social {
-    margin-top:30px
-}
-
-.social a {
-    background-color:#f7f7f7;
-    border-radius:35px;
-    margin:0 5px;
-    width:26px;
-    height:26px;
-    line-height:30px;
-    padding:16px;
-    display:inline-block;
-    transition:background-color .3s ease,color .3s ease;
-    color:#222
-}
-
-.social a:hover,.social a:focus {
-    outline:none;
-    background-color:#4ECDC4;
-    color:#556270
-}
-
-.social a .fa {
-    font-size:1.7em
-}
-
-.links {
-    color:#333;
-    margin-top:30px
-}
-
-.links a {
-    display:inline-block;
-    padding:0 5px;
-    font-weight:100
-}
-
-.links a:hover {
-    color:#ccc
-}
-
-@media (max-width: 660px) {
-h1 {
-    font-size:64px
-}
-
-h2 {
-    font-size:24px
-}
-}
-
-@media (max-width: 460px) {
-.wrap {
-    display:none
-}
-
-.main {
-    margin:0 auto;
-    margin-top:15%
-}
-
-.links a {
-    display:block
-}
-
-h1 {
-    font-size:48px
-}
-
-h2 {
-    font-size:16px
-}
-}
-
-@media (max-width: 320px) {
-h1 {
-    font-size:40px
-}
+#bottom-dirt {
+    background-image:url(https://dtahrvstlnd.files.wordpress.com/2013/01/screen-shot-2013-01-24-at-1-34-39-pm.png);
+    height:230px;
+    position:fixed;
+    bottom:0;
+    right:0;
+    width:100%
 }
